...
    scrollRef.current?.flashScrollIndicators();
  });

  const tabBarHeight = useBottomTabBarHeight();

  return (
    <View testID="profile-screen" style={styles.container}>
      {isFocused ? <StatusBar style="light" /> : null}
      <View style={styles.backgroundProfileContainer}>
        <Animated.View style={imgStyle}>
          <UserDogProfileHeader />
        </Animated.View>
        <Animated.View style={[styles.backgroundOverlay, overlayStyle]} />
...

              <Config.Arrow />
            </Config.Root>

            <Divider style={{ margin: theme.spacing[4] }} />

            <Config.Root testID="profile-logout" onPress={handleLogout}>
              <SignOut width={22} height={22} fill={theme.colors.text} />
              <Config.Container>
                <Config.Title>{t("profile.logout")}</Config.Title>
              </Config.Container>
            </Config.Root>

...
