...
        >
          <ThinkingEmoji />
        </ActionItem>
      </Animated.View>
      <Animated.View entering={likeAnimation}>
        <ActionItem
          testID="swipe-like"
          accessibilityRole="button"
          accessibilityLabel={t("swipeActions.like")}
          onPress={runIfSwipeIdle(onYep)}
        >
          <HeartEyesEmoji />
        </ActionItem>
...
