...
              ref={titleAnchorRef}
              collapsable={false}
              onLayout={onTitleLayout}
              style={[hideProfileTitle ? { opacity: 0 } : undefined, targetRecoveryStyle]}
            >
              <S.Name
                testID="dog-profile-name"
                accessibilityLabel={e2eInteractionDebug}
                accessibilityHint={e2eInteractionDebug}
                numberOfLines={1}
              >
                {dog.name}
                {dog.birthDate ? <S.Age>, {getFormattedYears(dog.birthDate)}</S.Age> : undefined}
...
